--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="inner">
 					<h1>HTML/CSS/JS Fundamentals</h1>
 					<p>I am ready to learn how to build websites</p>
-					<p id="Rostyslav Yasinskyi">Your name here</p>
+					<p id="student_name">Rostyslav Yasinskyi</p>
 					<div class="clock"></div>
 				</div>
 			</div>
